plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.cosmus'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
    implementation 'com.github.pagehelper:pagehelper-spring-boot-starter:2.1.0'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
    // 유효성 검사 라이브러리
	implementation 'org.springframework.boot:spring-boot-starter-validation'
        /* 스프링 웹플럭스 - WebClient */
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
        // 비밀번호 - 랜덤 초기화
    implementation 'org.apache.commons:commons-lang3:3.13.0'
    // 소셜 로그인
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

}


tasks.named('test') {
	useJUnitPlatform()
    ignoreFailures = true
}

springBoot {
    mainClass = 'com.cosmus.resonos.SecurityApplication'
}


tasks.withType(JavaCompile) {
    options.compilerArgs += ["-parameters"]
}
